# Certainty_labs

./: .env.example  .gitignore  Certainty_Labs_Master_Build_Doc.docx  README.md  deck  modal_app.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml
.streamlit/: config.toml
api/: auth.py  key_store.py  main.py  schemas.py  usage_meter.py
api/routes/: infer.py  keys.py  models.py  pipeline.py  train.py  usage.py
certainty/: __init__.py  pipeline.py
certainty/data/: __init__.py  generator.py  labeler.py  negatives.py  sampler.py
certainty/inference/: __init__.py  guided_decoder.py  registry.py  reranker.py
certainty/models/: __init__.py  dataset.py  ebm_model.py  loss.py  supported_models.py  trainer.py  utils.py
constraints/: medication_dosage.yaml  portfolio_balance.yaml
demo/: app.py
demo_dataset/: dataset-metadata.json
docs/: AWS_GPU_SETUP.md  AZURE_GPU_SETUP.md  MODAL_GPU_SETUP.md  PRODUCTION_ROADMAP.md  PUBLISHING_SDK.md  SUPABASE_SETUP.md  supabase_api_keys.sql  supabase_api_usage.sql  supabase_user_usage.sql
examples/: README.md  quickstart.py  user_test.py
notebooks/: demo_kaggle.ipynb  kaggle_remote.ipynb  kernel-metadata.json
platform/: .env.example  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
platform/src/: proxy.ts
platform/src/app/: globals.css  layout.tsx  page.tsx
platform/src/app/api/keys/: route.ts
platform/src/app/auth/: auth-form.tsx  page.tsx
platform/src/app/platform/: layout.tsx  page.tsx
platform/src/app/research/: page.tsx
platform/src/components/: footer.tsx  navbar.tsx  platform-sidebar.tsx
platform/src/components/blocks/: logos3-demo.tsx  logos3.tsx
platform/src/components/ui/: feature-section-with-bento-grid-demo.tsx  feature-section-with-bento-grid.tsx  radix-accordion.tsx  text-scramble-demo.tsx  text-scramble.tsx  typewriter.tsx  typing-animation.tsx
platform/src/lib/: api.ts
platform/src/lib/supabase/: admin.ts  client.ts  server.ts
scripts/: kaggle_run.sh  test_sdk.py  test_usage_metering.py
sdk/: README.md  pyproject.toml
sdk/certaintylabs/: __init__.py  async_client.py  client.py  exceptions.py  types.py
tests/: test_data_generator.py  test_ebm_model.py  test_reranker.py  test_sdk_api_integration.py  test_usage_meter.py  user_flow_test.py
(+9 files in other folders)
