[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "certaintylabs"
version = "0.2.0"
description = "Python SDK for the Certainty Labs API — constraint enforcement for production LLMs"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
dependencies = [
    "httpx>=0.27.0",
    "rich>=13.0.0",
]
authors = [{ name = "Certainty Labs" }]
keywords = ["llm", "constraints", "energy-based-model", "reranking", "certainty"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://certaintylabs.ai"
Documentation = "https://certaintylabs.ai/platform/docs"
Repository = "https://github.com/certainty-labs/certainty-sdk"

[tool.hatch.build.targets.wheel]
packages = ["certaintylabs"]
